# GTO-Solver

./: .gitignore  CMakeLists.txt  README.md
docs/: catalog.txt
include/: card_textures.hpp  deck.hpp  math.hpp  preflop_odds.hpp
src/: card_textures.cpp  deck.cpp  main.cpp  preflop_odds.cpp
tank/: mc_preflop.tsv
